--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Golden Sails Web/index.html"
+export_path="../Golden Sails Web 2/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
