--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Golden Sails Web 2/index.html"
+export_path="../../../Downloads/GOLDEN SAILS HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Golden Sails Windows/goldensails.exe"
+export_path="../../../Downloads/GOLDEN SAILS WINDOWS/goldensails.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
